feat: attendance feature
